버튼 스타일 변경

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,10 +30,10 @@
 }
 
 // 스크롤 애니메이션
-.ftco-animate {
-  opacity: 0;
-  visibility: hidden;
-}
+// .ftco-animate {
+//   opacity: 0;
+//   visibility: hidden;
+// }
 
 .ftco-animated {
   -webkit-animation-duration: .5s;
