--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -22,7 +22,8 @@
   width: 100%;
   height: 100%;
   position: relative;
-  background-color: #f8f9fa; /* 배경색 */
+  background-color: #f8f9fa; 
+  /* overflow: hidden; 블러 배경 전용 */
 }
 
 .diagonal-layout::after {
@@ -36,6 +37,20 @@
   clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%); /* 대각선 각도 조정 */
   z-index: 1;
 }
+
+/* .blurred-background {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 65%; 
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  filter: blur(10px); 
+  transform: scale(1.1); 
+  opacity: 0.5; 
+  z-index: 0;
+} */
 
 .content-wrapper {
   position: relative;
@@ -93,6 +108,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  /* z-index: 3; 블러 배경 전용 */
 }
 
 .profile-img {
@@ -129,6 +145,12 @@
 
 /* 반응형 스타일 */
 @media (max-width: 991px) {
+  /* .blurred-background {
+    width: 100%;
+    height: 100%;
+    opacity: 0.2;
+  } */
+
   .diagonal-layout::after {
     width: 100%;
     clip-path: polygon(0 0, 100% 0, 100% 30%, 0 50%);
