hero 섹션과 navbar 배경 겹치도록

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -72,12 +72,12 @@ h1, h2, h3, h4, h5,
 
 
 .ftco-navbar-light {
-	background: transparent !important;
-	position: absolute;
+	background-color: transparent !important;
+	position: absolute !important;
 	top: 0;
 	left: 0;
 	right: 0;
-	z-index: 100;
+	z-index: 1030;
   padding: 20px 0;
   transition: all 0.3s ease;
 
@@ -240,7 +240,7 @@ h1, h2, h3, h4, h5,
 	}
 	
 	&.scrolled  {
-		position: fixed;
+		position: fixed !important;
 		right: 0;
 		left: 0;
 		top: 0;
