--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -2,7 +2,7 @@
 .hero {
   position: relative;
   width: 100%;
-  height: 80vh;
+  height: 90vh;
   overflow: hidden;
 }
 
@@ -22,7 +22,7 @@
   width: 100%;
   height: 100%;
   position: relative;
-  background-color: #f8f9fa; 
+  background-color: #f8f9fb; 
   /* overflow: hidden; 블러 배경 전용 */
 }
 
