--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -850,10 +850,34 @@ h1, h2, h3, h4, h5,
 
 //FTCO ABOUT
 .ftco-about{
+  // 모바일 전체 컨테이너 패딩 추가
+  @include media-breakpoint-down(md){
+    .container {
+      padding-left: 25px !important;
+      padding-right: 25px !important;
+    }
+    
+    .row {
+      margin-left: -10px !important;
+      margin-right: -10px !important;
+    }
+    
+    .col-md-6, .col-md-12, .col-lg-6, .col-lg-12 {
+      padding-left: 15px !important;
+      padding-right: 15px !important;
+    }
+  }
+  
 	.img-about{
 		width: 100%;
 		z-index: 0;
 		position: relative;
+		margin-bottom: 20px;
+		
+		@include media-breakpoint-down(md){
+			padding: 0 10px;
+		}
+		
 		.img{
 			display: block;
 			width: 100%;
@@ -862,39 +886,102 @@ h1, h2, h3, h4, h5,
 			-webkit-box-shadow: -20px 20px 69px -27px rgba(0,0,0,0.33);
 			-moz-box-shadow: -20px 20px 69px -27px rgba(0,0,0,0.33);
 			box-shadow: -20px 20px 69px -27px rgba(0,0,0,0.33);
+			
+			@include media-breakpoint-down(md){
+				max-height: 350px;
+				object-fit: cover;
+				-webkit-box-shadow: -10px 10px 30px -15px rgba(0,0,0,0.33);
+				-moz-box-shadow: -10px 10px 30px -15px rgba(0,0,0,0.33);
+				box-shadow: -10px 10px 30px -15px rgba(0,0,0,0.33);
+			}
 		}
 	}
+	
+	.about-desc {
+    @include media-breakpoint-down(md){
+      padding: 0 10px;
+    }
+  }
+	
 	ul.about-info{
 		display: inline-block;
 		padding: 0;
 		margin: 0;
 		width: 100%;
+		
+		@include media-breakpoint-down(md){
+			margin-top: 20px;
+			padding: 0 10px;
+		}
+		
 		li{
 			list-style: none;
-			margin-bottom: 10px;
+			margin-bottom: 16px;
+			display: flex;
+			flex-wrap: wrap;
+			
+			@include media-breakpoint-down(sm){
+				margin-bottom: 20px;
+			}
+			
 			span{
 				width: calc(100% - 130px);
 				font-weight: 600;
 				color: $primary;
+				
+				@include media-breakpoint-down(sm){
+					width: 100%;
+					margin-top: 5px;
+					line-height: 1.4;
+				}
+				
 				&:first-child{
 					font-weight: 600;
 					color: $black;
 					width: 130px;
+					
+					@include media-breakpoint-down(sm){
+						width: 100%;
+						margin-bottom: 5px;
+					}
 				}
 			}
 		}
 	}
+	
 	.my-interest{
-		margin-top: 30px;
+		margin-top: 40px;
+		
+		@include media-breakpoint-down(md){
+			margin-top: 30px;
+			padding: 0 10px;
+			overflow: hidden; // float 요소를 위한 clearfix
+		}
+		
+		h3 {
+		  @include media-breakpoint-down(md){
+        margin-bottom: 20px;
+      }
+		}
+		
 		.interest-wrap{
 			width: 25%;
 			border-left: 2px solid $primary;
 			padding-left: 10px;
+			margin-bottom: 15px;
+			
 			@include media-breakpoint-down(lg){
 				width: 50%;
 				float: left;
-				margin-bottom: 10px;
+				margin-bottom: 20px;
+				padding-right: 15px;
 			}
+			
+			@include media-breakpoint-down(sm){
+				width: 100%;
+				margin-bottom: 15px;
+			}
+			
 			.icon{
 				width: 30px;
 				height: 30px;
@@ -909,9 +996,23 @@ h1, h2, h3, h4, h5,
 				font-weight: 600;
 				color: $black;
 				padding-left: 5px;
+				line-height: 1.3;
 			}
 		}
 	}
+	
+	// 아주 작은 화면에서 추가 여백
+	@include media-breakpoint-down(sm){
+    .container {
+      padding-left: 20px !important;
+      padding-right: 20px !important;
+    }
+    
+    p {
+      line-height: 1.6;
+      margin-bottom: 15px;
+    }
+  }
 }
 
 //SERVICES
@@ -920,7 +1021,11 @@ h1, h2, h3, h4, h5,
 	width: 100%;
 	// border: 1px solid $primary;
 	padding: 30px;
-	margin-bottom: 60px;
+	margin-bottom: 20px;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	
 	.icon{
 		line-height: 1.3;
 		position: relative;
@@ -929,33 +1034,78 @@ h1, h2, h3, h4, h5,
 		height: 80px;
 		background: $primary;
 		border-radius: 50%;
+		border: 1px solid #f1f1f1;
+		// box-shadow: 0px 2px 2px 2px #f8f9fb;
 		margin-bottom: 15px;
 		@include transition(.3s);
-		span{
-			font-size:40px;
-			color: $white;
+		
+		.icon-fixed {
+			position: relative;
+			z-index: 2;
 		}
 	}
+	
 	.media-body{
+		flex: 1;
+		display: flex;
+		flex-direction: column;
+		
 		h3{
 			font-size: 18px;
-			font-weight: 500;
+			font-weight: 600;
+		}
+		
+		.service-description {
+			font-size: 16px;
+			line-height: 1.5;
+			flex: 1;
 		}
 	}
+	
 	&:hover{
 		background: $primary !important;
 		.icon{
 			background: $white;
 			margin-left: 20px;
-			span{
-				color: $primary;
+			.icon-fixed {
+				color: $primary !important;
 			}
 		}
 		h3{
-			color: $white;
+			color: $white !important;
 		}
 		.media-body{
-			color: rgba(255,255,255,.8);
+			color: rgba(255,255,255,.8) !important;
+			
+			p {
+				color: rgba(255,255,255,.8) !important;
+			}
+		}
+	}
+	
+	// 모바일 스타일 개선
+	@include media-breakpoint-down(md) {
+		padding: 25px 15px;
+		margin-bottom: 30px;
+		
+		.icon {
+			margin-top: -50px;
+			width: 70px;
+			height: 70px;
+		}
+		
+		.media-body {
+			padding: 0 5px;
+			
+			h3 {
+				font-size: 17px;
+				margin-bottom: 10px;
+			}
+			
+			.service-description {
+				font-size: 15px;
+				line-height: 1.4;
+			}
 		}
 	}
 }
