카드 텍스트, 뱃지 배경 스타일 추가

--- a/src/css/single-portfolio-page.css
+++ b/src/css/single-portfolio-page.css
@@ -54,6 +54,14 @@
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.05);
 }
 
+.card-text {
+  color: #999999;
+}
+
+.badge-primary {
+  background-color: #b1b493 !important;
+}
+
 /* 기술 태그 스타일 */
 .tech-container {
   display: flex;
