contact 섹션 위/아래 패딩 주고 카드 부분 각 둥글게

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1923,6 +1923,9 @@ textarea.form-control {
 
 
 .contact-section {
+	padding-top: 6rem !important;
+  padding-bottom: 6rem !important;
+
 	.img{
 		width: 100%;
 		background-position: top center;
@@ -1937,7 +1940,7 @@ textarea.form-control {
 	}
 	.contact-form{
 		width: 100%;
-		border-radius: 5px;
+		border-radius: 10px;
 		.btn-primary{
 			@include media-breakpoint-down(sm){
 				display: block;
