섹션 배경 색 수정

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1320,6 +1320,7 @@ h1, h2, h3, h4, h5,
 
 //TESTIMONY
 .testimony-section{
+	background-color: #b1b493; 
 	position: relative;
 	.owl-carousel{
 		margin: 0;
