모바일 - 스크롤 시 메뉴바 스타일 통일

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -248,12 +248,18 @@ h1, h2, h3, h4, h5,
 		background: $white!important;
 		box-shadow: 0 0 10px 0 rgba(0,0,0,.1);
 		padding: 0 15px;
+
+		@include media-breakpoint-down(md) {
+      background: $black !important; // 모바일에서 스크롤 시에도 검정색 배경 유지
+    }
+
 		.nav-item {
 			> .nav-link{
 				@include media-breakpoint-down(md){
 					padding-left: 0 !important;
 					padding-right: 0 !important;
 					padding-bottom: 20px !important;
+					color: $white !important;
 				}
 			}
 			&.active {
@@ -304,6 +310,10 @@ h1, h2, h3, h4, h5,
 			font-size: 16px;
 			letter-spacing: .1em;
 
+			@include media-breakpoint-down(md) {
+        color: rgba(255,255,255,.5) !important; // 모바일에서 스크롤 시 토글러 색상도 흰색으로 유지
+        border-color: rgba(255,255,255,.5) !important;
+      }
 		}
 		.nav-link {
 			color: $black!important;
@@ -324,6 +334,11 @@ h1, h2, h3, h4, h5,
 			padding-top: 1rem;
 			padding-bottom: 1rem;
 			font-size: 24px;
+
+			@include media-breakpoint-down(md) {
+        color: $white; // 모바일에서 스크롤 시 브랜드 이름도 흰색으로 유지
+      }
+
 			span{
 				color: $primary;
 			}
